test/1.2/errors/T_ECYCLICIMP.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// SCAN-FOR-TAGS ECYCLICIMP_1.dml
import "ECYCLICIMP_1.dml";
